scripts/nullaway/annotator/url3010dbde70_nbartlett_Sequence_Memoizer_tgz-pJ8-edu_columbia_stat_wood_pub_sequencememoizer_IntSequenceMemoizerJ8.txt
../annotator/url3010dbde70_nbartlett_Sequence_Memoizer_tgz-pJ8-edu_columbia_stat_wood_pub_sequencememoizer_IntSequenceMemoizerJ8/src/edu/columbia/stat/wood/pub/sequencememoizer/IntSequenceMemoizer.java:48: error: [NullAway] @NonNull static field RNG not initialized
    public static MersenneTwisterFast RNG;
                                      ^
    (see http://t.uber.com/nullaway )
../annotator/url3010dbde70_nbartlett_Sequence_Memoizer_tgz-pJ8-edu_columbia_stat_wood_pub_sequencememoizer_IntSequenceMemoizerJ8/src/edu/columbia/stat/wood/pub/sequencememoizer/IntSequenceMemoizer.java:225: error: [NullAway] passing @Nullable parameter 'mostOfPDF' where @NonNull is required
        return new IntHashMapDiscreteDistribution(mostOfPDF, baseDistribution,multFactor);
                                                  ^
    (see http://t.uber.com/nullaway )
../annotator/url3010dbde70_nbartlett_Sequence_Memoizer_tgz-pJ8-edu_columbia_stat_wood_pub_sequencememoizer_IntSequenceMemoizerJ8/src/edu/columbia/stat/wood/pub/sequencememoizer/util/IntSequence.java:85: error: [NullAway] assigning @Nullable expression to @NonNull field
        first.previous = null;
                       ^
    (see http://t.uber.com/nullaway )
../annotator/url3010dbde70_nbartlett_Sequence_Memoizer_tgz-pJ8-edu_columbia_stat_wood_pub_sequencememoizer_IntSequenceMemoizerJ8/src/edu/columbia/stat/wood/pub/sequencememoizer/util/IntSequence.java:192: error: [NullAway] initializer method does not guarantee @NonNull fields previous (line 190), next (line 190) are initialized along all control-flow paths (remember to check for exceptions or early returns).
        public IntSeqNode(@Nullable IntSeqNode previous, @Nullable IntSeqNode next, int nodeSize) {
               ^
    (see http://t.uber.com/nullaway )
../annotator/url3010dbde70_nbartlett_Sequence_Memoizer_tgz-pJ8-edu_columbia_stat_wood_pub_sequencememoizer_IntSequenceMemoizerJ8/src/edu/columbia/stat/wood/pub/sequencememoizer/util/IntSequence.java:199: error: [NullAway] initializer method does not guarantee @NonNull fields previous (line 190), next (line 190), intChunk (line 189) are initialized along all control-flow paths (remember to check for exceptions or early returns).
        public IntSeqNode(Collection<IntRestaurant> collection){
               ^
    (see http://t.uber.com/nullaway )
../annotator/url3010dbde70_nbartlett_Sequence_Memoizer_tgz-pJ8-edu_columbia_stat_wood_pub_sequencememoizer_IntSequenceMemoizerJ8/src/edu/columbia/stat/wood/pub/sequencememoizer/util/IntSequence.java:193: error: [NullAway] assigning @Nullable expression to @NonNull field
            this.previous = previous;
                          ^
    (see http://t.uber.com/nullaway )
../annotator/url3010dbde70_nbartlett_Sequence_Memoizer_tgz-pJ8-edu_columbia_stat_wood_pub_sequencememoizer_IntSequenceMemoizerJ8/src/edu/columbia/stat/wood/pub/sequencememoizer/util/IntSequence.java:194: error: [NullAway] assigning @Nullable expression to @NonNull field
            this.next = next;
                      ^
    (see http://t.uber.com/nullaway )
../annotator/url3010dbde70_nbartlett_Sequence_Memoizer_tgz-pJ8-edu_columbia_stat_wood_pub_sequencememoizer_IntSequenceMemoizerJ8/src/edu/columbia/stat/wood/pub/sequencememoizer/util/IntRestaurant.java:71: error: [NullAway] initializer method does not guarantee @NonNull fields types (line 28), customersAndTables (line 34), parent (line 64), edgeNode (line 69) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public IntRestaurant(@Nullable IntRestaurant parent, int edgeStart,  int edgeLength, @Nullable IntSeqNode edgeNode,  int numLeafNodesAtOrBelow, MutableLong restCount) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url3010dbde70_nbartlett_Sequence_Memoizer_tgz-pJ8-edu_columbia_stat_wood_pub_sequencememoizer_IntSequenceMemoizerJ8/src/edu/columbia/stat/wood/pub/sequencememoizer/util/IntRestaurant.java:72: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.parent = parent;
                    ^
    (see http://t.uber.com/nullaway )
../annotator/url3010dbde70_nbartlett_Sequence_Memoizer_tgz-pJ8-edu_columbia_stat_wood_pub_sequencememoizer_IntSequenceMemoizerJ8/src/edu/columbia/stat/wood/pub/sequencememoizer/util/IntRestaurant.java:75: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.edgeNode = edgeNode;
                      ^
    (see http://t.uber.com/nullaway )
../annotator/url3010dbde70_nbartlett_Sequence_Memoizer_tgz-pJ8-edu_columbia_stat_wood_pub_sequencememoizer_IntSequenceMemoizerJ8/src/edu/columbia/stat/wood/pub/sequencememoizer/util/IntMap.java:57: error: [NullAway] dereferenced expression values is @Nullable
                return values[index];
                             ^
    (see http://t.uber.com/nullaway )
../annotator/url3010dbde70_nbartlett_Sequence_Memoizer_tgz-pJ8-edu_columbia_stat_wood_pub_sequencememoizer_IntSequenceMemoizerJ8/src/edu/columbia/stat/wood/pub/sequencememoizer/util/IntMap.java:102: error: [NullAway] dereferenced expression values is @Nullable
                returnValue = values[index];
                                    ^
    (see http://t.uber.com/nullaway )
../annotator/url3010dbde70_nbartlett_Sequence_Memoizer_tgz-pJ8-edu_columbia_stat_wood_pub_sequencememoizer_IntSequenceMemoizerJ8/src/edu/columbia/stat/wood/pub/sequencememoizer/util/IntMap.java:138: error: [NullAway] assigning @Nullable expression to @NonNull field
                 keys = null;
                      ^
    (see http://t.uber.com/nullaway )
../annotator/url3010dbde70_nbartlett_Sequence_Memoizer_tgz-pJ8-edu_columbia_stat_wood_pub_sequencememoizer_IntSequenceMemoizerJ8/src/edu/columbia/stat/wood/pub/sequencememoizer/util/IntMap.java:204: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return values;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url3010dbde70_nbartlett_Sequence_Memoizer_tgz-pJ8-edu_columbia_stat_wood_pub_sequencememoizer_IntSequenceMemoizerJ8/src/edu/columbia/stat/wood/pub/sequencememoizer/util/MersenneTwisterFast.java:253: error: [NullAway] initializer method does not guarantee @NonNull fields mt (line 167), mag01 (line 169) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public MersenneTwisterFast(final long seed) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url3010dbde70_nbartlett_Sequence_Memoizer_tgz-pJ8-edu_columbia_stat_wood_pub_sequencememoizer_IntSequenceMemoizerJ8/src/edu/columbia/stat/wood/pub/sequencememoizer/util/MersenneTwisterFast.java:263: error: [NullAway] initializer method does not guarantee @NonNull fields mt (line 167), mag01 (line 169) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public MersenneTwisterFast(final int[] array) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url3010dbde70_nbartlett_Sequence_Memoizer_tgz-pJ8-edu_columbia_stat_wood_pub_sequencememoizer_IntSequenceMemoizerJ8/src/edu/columbia/stat/wood/pub/sequencememoizer/util/IntSamplingNode.java:374: error: [NullAway] assigning @Nullable expression to @NonNull field
                sa = null;
                   ^
    (see http://t.uber.com/nullaway )
../annotator/url3010dbde70_nbartlett_Sequence_Memoizer_tgz-pJ8-edu_columbia_stat_wood_pub_sequencememoizer_IntSequenceMemoizerJ8/src/edu/columbia/stat/wood/pub/sequencememoizer/util/SeatingArranger.java:14: error: [NullAway] @NonNull static field M not initialized
    private static double[][] M;
                              ^
    (see http://t.uber.com/nullaway )
../annotator/url3010dbde70_nbartlett_Sequence_Memoizer_tgz-pJ8-edu_columbia_stat_wood_pub_sequencememoizer_IntSequenceMemoizerJ8/src/edu/columbia/stat/wood/pub/sequencememoizer/util/SeatingArranger.java:72: error: [NullAway] dereferenced expression rng is @Nullable
                up = rng.nextBoolean(u / (s + u));
                        ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
19 errors
